(lang dune 3.17)

(name brillaint)

(generate_opam_files true)

(source
 (github emmanueljs1/bril))

(authors "Emmanuel Suarez Acevedo <emma@cs.cornell.edu>")

(maintainers "Emmanuel Suarez Acevedo <emma@cs.cornell.edu>")

(package
 (name brillaint)
 (synopsis "Lesson tasks for cs6120")
 (depends ocaml yojson))
